--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     
     <!-- header row with logo -->
+    <!-- Reference: https://getbootstrap.com/docs/4.0/components/navbar/ -->
     <nav class="navbar navbar-expand-lg justify-content-between" style="background-color: #91D8E4;">
         <a class="navbar-brand" href="#">
             <img id="tentacles" src="assets/tentacles.png">
